--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "shadcn-ui": "^0.9.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
-    "tsparticles": "^3.6.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
